实时资产功能

--- a/static/simpleaccount.html
+++ b/static/simpleaccount.html
@@ -13,7 +13,8 @@
         <label for="endDate">结束日期:</label>
         <input type="date" id="endDate" name="endDate"><br>
         <button type="button" id="queryButton" onclick="querySpendDay()">查询</button>
-        <div data-type="total">总计: <span id="totalAmount">0</span></div>
+        <div data-type="property">实时资产: <span id="propertyAmount">0</span></div>
+        <div data-type="total">筛选合计: <span id="totalAmount">0</span></div>
     </form>
 
     <!-- 模态对话框 -->
